<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <ImageView
            android:id="@+id/image_wb_product"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/apple"
            android:contentDescription="@string/image_of_item" />

        <ProgressBar
            android:id="@+id/imgLoader"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wb_product_name"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/apple"
            app:layout_constraintEnd_toStartOf="@+id/barrier"
            app:layout_constraintStart_toEndOf="@+id/image_wb_product"
            app:layout_constraintTop_toTopOf="parent"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/subtitle"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/_100_kg"
            app:layout_constraintStart_toEndOf="@+id/image_wb_product"
            app:layout_constraintTop_toBottomOf="@+id/wb_product_name" />


        <ImageButton
            android:id="@+id/btn_edit"
            style="@style/imageButton"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/qty_wb"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_2_5_kg"
            app:layout_constraintBottom_toBottomOf="@+id/btn_edit"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            app:layout_constraintTop_toTopOf="@+id/btn_edit" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="btn_add" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/non_zero_qty_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="btn_edit,qty_wb" />

        <ImageButton
            android:id="@+id/btn_add"
            style="@style/imageButton"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:contentDescription="@string/add_button" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/zero_qty_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btn_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>