<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.Chip
    android:id="@+id/variantName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text=""
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="@color/black"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <!--Quantity Group-->
    <ImageButton
        android:id="@+id/incBtn"
        style="@style/imageButton"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/zero_qty_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="incBtn"/>

    <ImageButton
        android:id="@+id/decBtn"
        style="@style/imageButton"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/edit_button"
        android:src="@drawable/ic_minus"
        app:layout_constraintEnd_toStartOf="@id/qty"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/qty"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="@+id/incBtn"
        app:layout_constraintEnd_toStartOf="@+id/incBtn"
        app:layout_constraintTop_toTopOf="@+id/incBtn" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/non_zero_qty_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="decBtn,qty"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>